outputs/tsp_aco-aco/2026-03-16_09-02-06/problem_iter10_response6.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 26
    """
       ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xa1 in position 198: invalid start byte
